--- a/jpa-basics-2/pom.xml
+++ b/jpa-basics-2/pom.xml
@@ -7,6 +7,13 @@
     <groupId>pl.eurekin.ttt</groupId>
     <artifactId>jpa-basics-2</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <repositories>
+        <repository>
+            <id>oss.sonatype.org</id>
+            <name>OSS Sonatype Staging</name>
+            <url>https://oss.sonatype.org/content/groups/staging</url>
+        </repository>
+    </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -46,6 +53,12 @@
     </profiles>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>org.eclipse.persistence.jpa</artifactId>
+            <version>2.5.0</version>
+        </dependency>
 
         <dependency>
             <groupId>${db.driver.groupId}</groupId>
