--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -30,7 +30,11 @@
             <version>1.0-SNAPSHOT</version>
 
         </dependency>
-
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>javac2</artifactId>
+            <version>6.0.3</version>
+        </dependency>
         <dependency>
             <groupId>com.intellij</groupId>
             <artifactId>forms_rt</artifactId>
