--- a/annotation-processor-experiment/pom.xml
+++ b/annotation-processor-experiment/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>annotation-processor-experiment</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <build>
 
