another fix - the dependencies need to be installed

--- a/module-run/pom.xml
+++ b/module-run/pom.xml
@@ -15,7 +15,7 @@
     </modules>
 
     <build>
-        <defaultGoal>verify</defaultGoal>
+        <defaultGoal>install</defaultGoal>
     </build>
 
 
