--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pl.eurekin.xml.fun</groupId>
-    <artifactId>xml-def-test</artifactId>
+    <artifactId>xml-ref-test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -50,7 +50,7 @@
         <profile>
             <id>run</id>
             <build>
-                <defaultGoal>verify</defaultGoal>
+                <defaultGoal>install</defaultGoal>
                 <plugins>
 
                     <plugin>
@@ -59,7 +59,7 @@
                         <version>1.2.1</version>
                         <executions>
                             <execution>
-                                <phase>verify</phase>
+                                <phase>install</phase>
                                 <goals>
                                     <goal>java</goal>
                                 </goals>
