silencing maven run

--- a/jpa-basics-2/pom.xml
+++ b/jpa-basics-2/pom.xml
@@ -77,6 +77,11 @@
 
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
+            <plugin>
                 <dependencies>
                     <dependency>
                         <groupId>${db.driver.groupId}</groupId>
