--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -52,7 +52,11 @@
             <build>
                 <defaultGoal>install</defaultGoal>
                 <plugins>
-
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <version>2.6</version>
+                    </plugin>
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
