--- a/annotation-processor-experiment/pom.xml
+++ b/annotation-processor-experiment/pom.xml
@@ -23,12 +23,20 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>3.0</version>
                 <configuration>
+					<compilerId>eclipse</compilerId>
                     <source>1.6</source>
                     <target>1.6</target>
                     <proc>none</proc>
                 </configuration>
+				   <dependencies>
+					  <dependency>
+						 <groupId>org.codehaus.plexus</groupId>
+						 <artifactId>plexus-compiler-eclipse</artifactId>
+						 <version>2.2</version>
+					  </dependency>
+				   </dependencies>
             </plugin>
         </plugins>
     </build>
