--- a/jpa-basics-2/pom.xml
+++ b/jpa-basics-2/pom.xml
@@ -77,6 +77,32 @@
 
         <plugins>
             <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version> 
+                <configuration>
+					<compilerId>eclipse</compilerId>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <proc>none</proc>
+                    <verbose>false</verbose>
+                    <showWarnings>true</showWarnings>
+                    <!--<forceJavacCompilerUse/>-->
+                    <compilerArguments>
+                        <!--<XprintProcessorInfo/>-->
+                        <!--<XprintRounds/>-->
+                    </compilerArguments>					
+                </configuration>
+				   <dependencies>
+					  <dependency>
+						 <groupId>org.codehaus.plexus</groupId>
+						 <artifactId>plexus-compiler-eclipse</artifactId>
+						 <version>1.8.2</version>
+					  </dependency>
+				   </dependencies>
+            </plugin>		
+		
+		
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.6</version>
