--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -117,24 +117,31 @@
                 </configuration>
             </plugin>
 
-
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
-
+                <version>3.0</version> 
                 <configuration>
+					<compilerId>eclipse</compilerId>
                     <source>1.6</source>
                     <target>1.6</target>
+                    <proc>none</proc> 
                     <verbose>false</verbose>
                     <showWarnings>true</showWarnings>
-                    <forceJavacCompilerUse/>
+                    <!--<forceJavacCompilerUse/> -->
                     <compilerArguments>
                         <!--<XprintProcessorInfo/>-->
                         <!--<XprintRounds/>-->
                     </compilerArguments>
                 </configuration>
+				   <dependencies>
+					  <dependency>
+						 <groupId>org.codehaus.plexus</groupId>
+						 <artifactId>plexus-compiler-eclipse</artifactId>
+						 <version>2.2</version>
+					  </dependency>
+				   </dependencies>
             </plugin>
-
+			
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
