--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -71,8 +71,8 @@
                         </executions>
 
                         <configuration>
-						    <!-- Java Swing app disappears - exec:java or maven issue, workaround from:							http://mail-archives.apache.org/mod_mbox/maven-users/200703.mbox/%3C5a2cf1f60703300629qd0d5338x19327e12b88b905d@mail.gmail.com%3E -->
-							<keepAlive>true</keepAlive>
+                            <!-- Java Swing app disappears - exec:java or maven issue, workaround from:							http://mail-archives.apache.org/mod_mbox/maven-users/200703.mbox/%3C5a2cf1f60703300629qd0d5338x19327e12b88b905d@mail.gmail.com%3E -->
+                            <keepAlive>true</keepAlive>
                             <mainClass>pl.eurekin.editor.LineDefinitionEditorView</mainClass>
                         </configuration>
                     </plugin>
@@ -117,31 +117,25 @@
                 </configuration>
             </plugin>
 
+
+
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version> 
+                <version>3.1</version>
                 <configuration>
-					<compilerId>eclipse</compilerId>
+                    <compilerId>jdt</compilerId>
                     <source>1.6</source>
                     <target>1.6</target>
-                    <proc>none</proc> 
-                    <verbose>false</verbose>
-                    <showWarnings>true</showWarnings>
-                    <!--<forceJavacCompilerUse/> -->
-                    <compilerArguments>
-                        <!--<XprintProcessorInfo/>-->
-                        <!--<XprintRounds/>-->
-                    </compilerArguments>
                 </configuration>
-				   <dependencies>
-					  <dependency>
-						 <groupId>org.codehaus.plexus</groupId>
-						 <artifactId>plexus-compiler-eclipse</artifactId>
-						 <version>2.2</version>
-					  </dependency>
-				   </dependencies>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.eclipse.tycho</groupId>
+                        <artifactId>tycho-compiler-jdt</artifactId>
+                        <version>0.16.0</version>
+                    </dependency>
+                </dependencies>
             </plugin>
-			
+
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
