--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -44,6 +44,14 @@
             <artifactId>forms_rt</artifactId>
             <version>7.0.3</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <profiles>
@@ -122,7 +130,7 @@
 
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>2.5.1</version>
                 <configuration>
                     <compilerId>jdt</compilerId>
                     <source>1.6</source>
@@ -132,11 +140,18 @@
                     <dependency>
                         <groupId>org.eclipse.tycho</groupId>
                         <artifactId>tycho-compiler-jdt</artifactId>
-                        <version>0.16.0</version>
+                        <version>0.18.0</version>
                     </dependency>
                 </dependencies>
             </plugin>
-
+            <plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-surefire-plugin</artifactId>
+                <version>0.18.0</version>
+                <configuration>
+                    <parallel>classes|methods|both</parallel>
+                </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
