--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -98,7 +98,11 @@
 
         <profile>
             <id>jnlp</id>
-
+            <properties>
+                <keystore.alias>EmbeddedTomcatWebstart</keystore.alias>
+                <keystore.file>${basedir}/keystore</keystore.file>
+                <keystore.password>password</keystore.password>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -114,7 +118,60 @@
                         </configuration>
                     </plugin>
 
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>${project.build.directory}/jnlp/lib</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
 
+                    <plugin>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <id>task1</id>
+                                <phase>package</phase>
+                                <configuration>
+                                    <target>
+                                        <echo message="!TASK-1"/>
+                                        <ant antfile="${basedir}/add-missing-properties.xml">
+                                            <target name="addPermissionAndCodebase" />
+                                        </ant>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>ant-contrib</groupId>
+                                <artifactId>ant-contrib</artifactId>
+                                <version>1.0b3</version>
+                                <exclusions>
+                                    <exclusion>
+                                        <groupId>ant</groupId>
+                                        <artifactId>ant</artifactId>
+                                    </exclusion>
+                                </exclusions>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.apache.ant</groupId>
+                                <artifactId>ant-nodeps</artifactId>
+                                <version>1.8.1</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
 
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
@@ -176,160 +233,52 @@
 
                             <!-- SIGNING -->
                             <!-- defining this will automatically sign the jar and its dependencies, if necessary -->
-                            <!--<sign>-->
-                                <!--<keystore>${basedir}/keystore</keystore>-->
-                                <!--<keypass>password</keypass>-->
-                                <!--&lt;!&ndash; we need to override passwords easily from the command line. ${keypass} &ndash;&gt;-->
-                                <!--<storepass>password</storepass>-->
-                                <!--&lt;!&ndash; ${storepass} &ndash;&gt;-->
-                                <!--&lt;!&ndash;storetype>fillme</storetype&ndash;&gt;-->
-                                <!--<alias>EmbeddedTomcatWebstart</alias>-->
+                            <sign>
+                                <keystore>${keystore.file}</keystore>
+                                <keypass>${keystore.password}</keypass>
+                                <!-- we need to override passwords easily from the command line. ${keypass} -->
+                                <storepass>${keystore.password}</storepass>
+                                <!-- ${storepass} -->
+                                <!--storetype>fillme</storetype-->
+                                <alias>${keystore.alias}</alias>
 
-                                <!--&lt;!&ndash;validity>fillme</validity&ndash;&gt;-->
+                                <!--validity>fillme</validity-->
 
-                                <!--&lt;!&ndash; only required for generating the keystore &ndash;&gt;-->
-                                <!--<dnameCn>EmbeddedTomcatWebstart</dnameCn>-->
-                                <!--<dnameOu>Organisation Unit</dnameOu>-->
-                                <!--<dnameO>Organisation</dnameO>-->
-                                <!--<dnameL>Location</dnameL>-->
-                                <!--<dnameSt>State</dnameSt>-->
-                                <!--<dnameC>Country</dnameC>-->
+                                <!-- only required for generating the keystore -->
+                                <dnameCn>EmbeddedTomcatWebstart</dnameCn>
+                                <dnameOu>Organisation Unit</dnameOu>
+                                <dnameO>Organisation</dnameO>
+                                <dnameL>Location</dnameL>
+                                <dnameSt>State</dnameSt>
+                                <dnameC>Country</dnameC>
 
-                                <!--<verify>true</verify>-->
-                                <!--&lt;!&ndash; verify that the signing operation succeeded &ndash;&gt;-->
+                                <verify>true</verify>
+                                <!-- verify that the signing operation succeeded -->
 
-                                <!--&lt;!&ndash; KEYSTORE MANAGEMENT &ndash;&gt;-->
-                                <!--<keystoreConfig>-->
-                                    <!--<delete>false</delete>-->
-                                    <!--&lt;!&ndash; delete the keystore &ndash;&gt;-->
-                                    <!--<gen>false</gen>-->
-                                    <!--&lt;!&ndash; optional shortcut to generate the store. &ndash;&gt;-->
-                                <!--</keystoreConfig>-->
-                            <!--</sign>-->
+                                <!-- KEYSTORE MANAGEMENT -->
+                                <keystoreConfig>
+                                    <delete>false</delete>
+                                    <!-- delete the keystore -->
+                                    <gen>false</gen>
+                                    <!-- optional shortcut to generate the store. -->
+                                </keystoreConfig>
+                            </sign>
 
                             <!-- BUILDING PROCESS -->
 
-                            <pack200>false</pack200>
-                            <gzip>false</gzip>
+                            <!--<pack200>true</pack200>-->
+                            <!--<gzip>true</gzip>-->
                             <!-- default force when pack200 false, true when pack200 selected ?? -->
 
                             <!-- causes a version attribute to be output in each jar resource element, optional, default is false -->
                             <outputJarVersions>false</outputJarVersions>
-                            <canUnsign>true</canUnsign>
-                            <unsignAlreadySignedJars>true</unsignAlreadySignedJars>
+                            <!--<canUnsign>true</canUnsign>-->
+                            <!--<unsignAlreadySignedJars>true</unsignAlreadySignedJars>-->
                             <!--install>false</install--> <!-- not yet supported -->
                             <verbose>true</verbose>
                         </configuration>
                     </plugin>
 
-                    <!--Trying out the missing codebase and permissions attribute solution from:-->
-
-                    <plugin>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.7</version>
-                        <executions>
-                            <execution>
-                                <id>add-trusted-library-attribute</id>
-                                <phase>package</phase>
-                                <configuration>
-                                    <target>
-                                        <ant antfile="${basedir}/build-trusted.xml">
-                                            <target name="addTrustedLibraries" />
-                                        </ant>
-
-                                        <macrodef name="unsignjar">
-
-                                            <attribute name="jar"/>
-
-                                            <sequential>
-                                                <!-- Remove any existing signatures from a JAR file. -->
-                                                <tempfile prefix="usignjar-" destdir="${java.io.tmpdir}" property="temp.file"/>
-                                                <echo message="Removing signatures from JAR: @{jar}"/>
-                                                <mkdir dir="${temp.file}"/>
-
-                                                <unjar src="@{jar}" dest="${temp.file}">
-                                                    <patternset>
-                                                        <include name="**"/>
-                                                        <exclude name="META-INF/*.SF"/>
-                                                        <exclude name="META-INF/*.DSA"/>
-                                                        <exclude name="META-INF/*.RSA"/>
-                                                    </patternset>
-                                                </unjar>
-
-                                                <delete file="@{jar}" failonerror="true"/>
-
-                                                <!-- Touch it in case the file didn't have a manifest.
-                                                     Otherwise the JAR task below will fail if the manifest
-                                                     file doesn't exist. -->
-                                                <mkdir dir="${temp.file}/META-INF"/>
-                                                <touch file="${temp.file}/META-INF/MANIFEST.MF"/>
-
-                                                <jar destfile="@{jar}"
-                                                     basedir="${temp.file}"
-                                                     includes="**"
-                                                     manifest="${temp.file}/META-INF/MANIFEST.MF"/>
-
-                                                <delete dir="${temp.file}" failonerror="true"/>
-                                            </sequential>
-                                        </macrodef>
-
-                                        <!--unsign and then re-sign fileset -->
-                                        <for param="file">
-                                            <path>
-                                                <fileset dir="target/jnlp/lib" includes="**/*.jar"/>
-                                            </path>
-                                            <sequential>
-                                                <antcall target="unsignjar">
-                                                    <param name="jar" value="@{file}"/>
-                                                </antcall>
-                                            </sequential>
-                                        </for>
-
-                                        <echo message="Repacking libs in target/jnlp/lib"/>
-                                        <apply executable="pack200" parallel="false">
-                                            <arg value="--repack"/>
-                                            <fileset dir="target/jnlp/lib" includes="**/*.jar" />
-                                        </apply>
-                                        <for param="file">
-                                            <path>
-                                                <fileset dir="target/jnlp/lib" includes="**/*.jar"/>
-                                            </path>
-                                            <sequential>
-                                                <signjar
-                                                        jar="@{file}"
-                                                        alias="myalias"
-                                                        storepass="mypass"
-                                                        keystore="${basedir}/keystore"/>
-                                            </sequential>
-                                        </for>
-
-
-                                    </target>
-                                </configuration>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <dependencies>
-                            <dependency>
-                                <groupId>ant-contrib</groupId>
-                                <artifactId>ant-contrib</artifactId>
-                                <version>1.0b3</version>
-                                <exclusions>
-                                    <exclusion>
-                                        <groupId>ant</groupId>
-                                        <artifactId>ant</artifactId>
-                                    </exclusion>
-                                </exclusions>
-                            </dependency>
-                            <dependency>
-                                <groupId>org.apache.ant</groupId>
-                                <artifactId>ant-nodeps</artifactId>
-                                <version>1.8.1</version>
-                            </dependency>
-                        </dependencies>
-                    </plugin>
 
 
 
