--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -305,6 +305,7 @@
                 </configuration>
             </plugin>
 
+            <!-- Increased stack size to get minesweeper safer from Stackoverflow -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -313,6 +314,36 @@
                     <argLine>-Xss8m</argLine>
                     <testFailureIgnore>false</testFailureIgnore>
                     <skip>false</skip>
+                </configuration>
+            </plugin>
+
+
+            <!-- Code Coverage published online -->
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>2.0.0</version>
+                <configuration>
+                    <repoToken>${env.COVERALLS_REPO_TOKEN}</repoToken>
+                    <sourceDirectories>
+                        <directory>target/generated-sources/annotations</directory>
+                        <sourceDirectory>../xml-ref-test/src/main/java</sourceDirectory>
+                        <sourceDirectory>../annotation-processor-experiment/src/main/java</sourceDirectory>
+                    </sourceDirectories>
+                </configuration>
+            </plugin>
+
+            <!-- Code Coverage itself -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.5.2</version>
+                <configuration>
+                    <format>xml</format>
+                    <maxmem>256m</maxmem>
+                    <!-- aggregated reports for multi-module projects -->
+                    <aggregate>true</aggregate>
+
                 </configuration>
             </plugin>
 
