--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -87,7 +87,8 @@
                             <!-- Java Swing app disappears - exec:java or maven issue, workaround from:
                             http://mail-archives.apache.org/mod_mbox/maven-users/200703.mbox/%3C5a2cf1f60703300629qd0d5338x19327e12b88b905d@mail.gmail.com%3E -->
                             <keepAlive>true</keepAlive>
-                            <mainClass>pl.eurekin.editor.LineDefinitionEditorView</mainClass>
+                            <!--<mainClass>pl.eurekin.editor.LineDefinitionEditorView</mainClass>-->
+                            <mainClass>experimental.sweeper.Sweeper</mainClass>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -299,7 +300,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>pl.eurekin.editor.LineDefinitionEditorView</mainClass>
+                            <mainClass>experimental.sweeper.Sweeper</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -388,7 +389,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>pl.eurekin.editor.LineDefinitionEditorView</mainClass>
+                            <mainClass>experimental.sweeper.Sweeper</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
