--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -25,7 +25,15 @@
         </repository>
     </repositories>
 
+
     <dependencies>
+
+        <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>jxlayer</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.moxy</artifactId>
