--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -27,6 +27,11 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>com.jhlabs</groupId>
+            <artifactId>filters</artifactId>
+            <version>2.0.235</version>
+        </dependency>
 
         <dependency>
             <groupId>org.swinglabs</groupId>
