--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -323,6 +323,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.10</version>
                 <configuration>
                     <forkMode>once</forkMode>
                     <argLine>-Xss8m</argLine>
