--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mainClass>experimental.ShowOffApplication</mainClass>
+        <jna.version>3.3.0</jna.version>
     </properties>
 
     <repositories>
@@ -70,6 +71,19 @@
             <scope>test</scope>
         </dependency>
 
+        <!--JNA-->
+
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>${jna.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>${jna.version}</version>
+            <classifier>platform</classifier>
+        </dependency>
 
     </dependencies>
 
@@ -102,7 +116,7 @@
                             http://mail-archives.apache.org/mod_mbox/maven-users/200703.mbox/%3C5a2cf1f60703300629qd0d5338x19327e12b88b905d@mail.gmail.com%3E -->
                             <keepAlive>true</keepAlive>
                             <!--<mainClass>pl.eurekin.editor.LineDefinitionEditorView</mainClass>-->
-                            <mainClass>experimental.sweeper.Sweeper</mainClass>
+                            <mainClass>${mainClass}</mainClass>
                         </configuration>
                     </plugin>
                 </plugins>
