Pin to Taskbar on Windows 7 - locally works. Trying out the WebStart version.

--- a/xml-ref-test/pom.xml
+++ b/xml-ref-test/pom.xml
@@ -16,7 +16,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <mainClass>experimental.ShowOffApplication</mainClass>
-        <jna.version>3.3.0</jna.version>
+        <jna.version>4.0.0</jna.version>
     </properties>
 
     <repositories>
@@ -73,17 +73,16 @@
 
         <!--JNA-->
 
-        <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna</artifactId>
-            <version>${jna.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.java.dev.jna</groupId>
-            <artifactId>jna</artifactId>
-            <version>${jna.version}</version>
-            <classifier>platform</classifier>
-        </dependency>
+            <dependency>
+                <groupId>net.java.dev.jna</groupId>
+                <artifactId>jna</artifactId>
+                <version>${jna.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.java.dev.jna</groupId>
+                <artifactId>jna-platform</artifactId>
+                <version>${jna.version}</version>
+            </dependency>
 
     </dependencies>
 
